修改配置使其正常编译

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,12 +1,10 @@
 # config.properties
-app.name=MyApplication
+app.name=gms214
 app.version=1.0.0
 app.debug=true
 
 # add debug inpacket
 app.debug.inpacket=true
-
-
 
 # GameConstants
 GameConstants.MOB_EXP_RATE = 1
